--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -1,8 +1,6 @@
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    background-color: #FFFFFF;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #000000;
 }
