--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,29 @@
-.header {
-  display: flex;
-  height: 100vh;
-  width: 100%;
+.Title {
+    padding: 20px;
+    color: rgb(62, 204, 145);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    display: inline
+}
+
+.head {
+    background-color: rgb(191, 245, 129); 
+}
+
+.Receitas {
+  height: 0;
+}
+
+.Perfil {
+  height: 0;
+} 
+
+.options {
+  display: inline;
+  align-items: flex-end;
+  padding-left: 5px;
+}
+
+.header-options {
+  padding-right: 20px;
+  text-align: right;
 }
