--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,46 @@
 .Title {
-    padding: 20px;
-    color: rgb(62, 204, 145);
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    display: inline
-}
-
-.head {
-    background-color: rgb(191, 245, 129); 
-}
-
-.Receitas {
-  height: 0;
-}
-
-.Perfil {
-  height: 0;
-} 
-
-.options {
+  color: rgb(62, 204, 145);
+  font-family: Georgia, "Times New Roman", Times, serif;
   display: inline;
-  align-items: flex-end;
-  padding-left: 5px;
 }
 
-.header-options {
+header {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  align-items: center;
+  padding: 10px 20px;
+  background: #dbebd7;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 70px;
+  margin: 0;
   padding-right: 20px;
-  text-align: right;
+}
+
+nav a {
+  text-decoration: none;
+  color: rgb(62, 204, 145);
+  font-weight: bold;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.logo img {
+  height: 80px;
+  width: 80px;
+}
+
+
+
+
+.corpo {
+  display: none;
 }
