--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,17 +1,27 @@
 .inputs {
-  display: grid;
-  grid-template-columns: repeat(1);
-  max-width: 300px;
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column; 
   align-items: center;
   text-align: center;
 }
 
-.input {
-    padding: 5px;
-    margin-top: 15px;
+.Nome, .Senha {
+  align-items: center;
+  margin-top: 20px;
+  min-height: 50px;
+  padding: 15px;
 }
 
 .page {
-    text-align: center;  
+    text-align: center;
+    padding-top: 200px;
+}
+
+.botao {
+  margin-top: 15px;
+  border-style: none;
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #ffc787;
 }
