--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,9 +1,3 @@
-.Title {
-  color: rgb(216, 113, 65);
-  font-family: Georgia, "Times New Roman", Times, serif;
-  display: inline;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -11,6 +5,25 @@ header {
   align-items: center;
   padding: 20px 40px;
   background: #ffc787;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+header.visible {
+  transform: translateY(0);
+}
+
+header.hidden {
+  transform: translateY(-100%);
+}
+
+.Title {
+  color: rgb(216, 113, 65);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 nav ul {
@@ -36,4 +49,9 @@ nav a {
 .logo img {
   height: 80px;
   width: 80px;
+}
+
+body {
+  margin: 0;
+  padding-top: 100px; 
 }
