--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,4 +1,3 @@
-
 header {
   position: fixed;
   width: 100%;
@@ -11,18 +10,50 @@ header {
 .full-page {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-width: 1800px;
+  min-height: 90vh;
+  background-color: #f8d5ad;
 }
 
-main {
-  margin-top: 200px;
-  margin-right: 40px;
-  padding: 20px;
-  width: 100%;
-  position: fixed;
-  background-color: #F3F3F3;
+.Page { 
+  text-align: center;
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #ffc787;
+}
+
+.Page h1{
+  font-weight: 700;
+  color: rgb(216, 113, 65);
+}
+ .Page h2 {
+  color: rgb(216, 113, 65);
+ }
+
+.Page h3 {
+  padding-top: 15px;
+  font-size: 20px;
+  color: #5a5a5a;
 }
 
 main h3{
     padding-left: 20px;
+}
+
+.buttons {
+  margin-top: 50px;
+}
+
+.buttons button {
+  background-color: #fadcb9;
+  border: none;
+  padding: 15px;
+  margin-left: 35px;
+  margin-right: 35px;
+  border-radius: 10px;
+  font-weight: 700;
+}
+
+.buttons button:hover {
+  background-color:#ffac4d;
 }
