--- a/src/components/css/Cadastro.css
+++ b/src/components/css/Cadastro.css
@@ -1,6 +1,6 @@
 
 body {
-  height: 100vh;
+  height: 90vh;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -34,13 +34,10 @@ body {
   background-size: 55px 55px;
 }
 
-/* container principal do formulário */
 .form-container {
   border-radius: 0.75rem;
   background-color: rgb(236, 171, 131);
-  padding: 50px;
-  width: 400px;                /* largura fixa mais elegante */
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* sombra para destacar */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
 
 .title {
@@ -51,9 +48,6 @@ body {
   color: rgb(216, 113, 65);
 }
 
-.form {
-  margin-top: 1.5rem;
-}
 
 .input-group {
   margin-top: 0.25rem;
