--- a/src/components/css/Perfil.css
+++ b/src/components/css/Perfil.css
@@ -1,20 +1,20 @@
-/* === Layout Geral === */
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f8f8f8;
-  margin: 0;
-  padding: 0;
-}
-
 main.perfil-container {
   display: flex;
   gap: 20px;
   padding: 20px;
   max-width: 1100px;
-  margin: 0 auto;
+  margin-top: 210px;
 }
 
-/* === Sidebar (Perfil) === */
+header {
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  background: #ffc787;
+  display: flex;
+  padding: 0 40px;
+}
+
 .perfil-card {
   width: 280px;
   background-color: #fff;
