--- a/src/components/css/Perfil.css
+++ b/src/components/css/Perfil.css
@@ -1,3 +1,11 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Fredoka', sans-serif;
+}
+
 main.perfil-container {
   display: flex;
   gap: 20px;
