--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,3 +1,10 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Fredoka', sans-serif;
+}
 header {
   position: fixed;
   width: 100%;
@@ -6,7 +13,6 @@ header {
   display: flex;
   padding: 0 40px;
 }
-
 .full-page {
   display: flex;
   flex-direction: column;
@@ -45,13 +51,14 @@ main h3{
 }
 
 .buttons button {
-  background-color: #fadcb9;
+  background-color: rgb(255, 144, 92);
   border: none;
   padding: 15px;
   margin-left: 35px;
   margin-right: 35px;
   border-radius: 10px;
   font-weight: 700;
+  color: black;
 }
 
 .buttons button:hover {
