--- a/src/components/css/Receitas.css
+++ b/src/components/css/Receitas.css
@@ -1,26 +1,30 @@
-/* ======= estilo: Receitas com tons amarelados ======= */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #fffaf0; /* tom de amarelo bem claro */
+    background-color: #fffaf0;
     color: #3b3b3b;
-    margin: 50px;
     padding: 0;
   }
 
-  header {
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    background: #ffc787;
-    display: flex;
-    padding: 0 40px;
-  }
+header {
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  background: #ffc787;
+  display: flex;
+  padding: 0 40px;
+}
   
   .receitas-main {
     max-width: 1000px;
     padding: 1rem;
-    max-height: 500px;
+    max-height: 100vh;
   }
   
   h1 {
